# recipebox

./: db.sqlite3  pyproject.toml
recipe_app/: admin.py  forms.py  models.py  urls.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20200805_1808.py  0002_recipe_favorited_by.py  0003_auto_20200805_1855.py
recipebox/: settings.py  urls.py
templates/: author_details.html  generic_form.html  home.html  recipe_details.html
