[tool.poetry]
name = "recipe_box"
version = "0.1.0"
description = "\"shows lists of recipes, author details and author's recipes, and recipe details\""
authors = ["Kyle Negley"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
